Bug 131062 - FILEOPEN DOCX Table cell background color lost
Summary: FILEOPEN DOCX Table cell background color lost
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: László Németh
URL:
Whiteboard: target:7.0.0 target:24.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2020-03-02 08:48 UTC by NISZ LibreOffice Team
Modified: 2023-07-05 07:30 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original document side by side in Word and Writer (141.86 KB, image/png)
2020-03-02 08:48 UTC, NISZ LibreOffice Team
Details
Example file. (541 bytes, text/plain)
2020-03-02 08:50 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2020-03-02 08:48:02 UTC
Description:
When opening the unit test file sw/qa/extras/ooxmlexport/data/tdf118947_tableStyle.docx
one can notice that the first cell has no background color, but in Word it has a light green one.

Steps to Reproduce:
Open sw/qa/extras/ooxmlexport/data/tdf118947_tableStyle.docx

Actual Results:
First cell has no background color.

Expected Results:
First cell should have light green background color.


Reproducible: Always


User Profile Reset: No



Additional Info:
Verzió: 7.0.0.0.alpha0+ (x64)
Build az.: 853a058ca6b75b0fb14e232911eb9f9553574736
CPU szálak: 8; OS: Windows 10.0 Build 17134; Felületmegjelenítés: GL; VCL: win; 
Területi beállítások: hu-HU (hu_HU); Felület nyelve: hu-HU
Calc: CL

But it was good in:
Version: 7.0.0.0.alpha0+ (x64)
Build ID: 41177730421f9be9ad955766a5a19667d8003b11
CPU threads: 8; OS: Windows 10.0 Build 17134; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: CL

Regression from commit a9ba8e57a41c5ddf3597272bddab30e51fb3fd38 (Revert "tdf#118947 sw tablestyle: manually scan parents for ::SET").
Comment 1 NISZ LibreOffice Team 2020-03-02 08:48:41 UTC
Created attachment 158297 [details]
Screenshot of the original document side by side in Word and Writer
Comment 2 NISZ LibreOffice Team 2020-03-02 08:50:28 UTC
Created attachment 158298 [details]
Example file.
Comment 3 Commit Notification 2020-03-02 09:32:46 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/7f805108a4ccc5751d7cbcb722ded5247e398578

tdf#131062 DOCX import: fix table-style paragraph background color

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2020-03-04 11:57:36 UTC
Verified in

Version: 7.0.0.0.alpha0+
Build ID: badc05a36720c69e5d22173b549b98cf6b88a0d2
CPU threads: 4; OS: Linux 4.19; UI render: default; VCL: gtk3; 
Locale: en-US (en_US.UTF-8); UI-Language: en-US
Calc: threaded

@László Németh, thanks for fixing this issue!!
Comment 5 Commit Notification 2023-07-05 07:30:35 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/4cb31f481e8bc271a39aaa4953edda8d898413be

Related: tdf#131062 Simplify a bit

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.