tdf#131062 DOCX import: fix table-style paragraph background color

by comparing fill attributes to ParaBackColor to avoid losing them.

Regression from commit a9ba8e57a41c5ddf3597272bddab30e51fb3fd38
(Revert "tdf#118947 sw tablestyle: manually scan parents for ::SET").

See also commit 24077b2d52ab3d0fd0db5afb25d8b94b62386e3e
(writerfilter: import paragraph color as fill attributes)

Change-Id: Id42ea3adaddf883435dd61e5dea0e6c5fb89f927
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/89215
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>